# dora

./: .gitignore  BUILD  BUILD.bazel  Makefile  WORKSPACE  dora.bzl  fix_update.py  glide.yaml  main.go
certs/: generate.sh  server.key  server.pem
data/: BUILD.bazel  data.go  proto_fs.go
insecure/: BUILD.bazel
proto/: BUILD  BUILD.bazel  testify.proto
server/: BUILD.bazel  dora.go  main.go  proto_fs.go  server.go
storage/: BUILD.bazel  database.go
