load("@io_bazel_rules_go//go:def.bzl", "go_library")

licenses(["notice"])

package(
    default_visibility = ["//visibility:public"],
)

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

filegroup(
    name = "srcs",
    srcs = [
        "BUILD.bazel",
        ":proto",
    ],
)

filegroup(
    name = "proto",
    srcs = ["testify.proto"],
)

######### LIBRARY #########

go_proto_library(
    name = "proto_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/raggledodo/dora/proto",
    proto = ":proto_proto",
    deps = ["@go_googleapis//google/api:annotations_go_proto"],
)

go_library(
    name = "go_default_library",
    embed = [":proto_go_proto"],
    importpath = "github.com/raggledodo/dora/proto",
)

proto_library(
    name = "proto_proto",
    srcs = ["testify.proto"],
    deps = [
        "@com_google_protobuf//:empty_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)
