load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@org_pubref_rules_protobuf//cpp:rules.bzl", "cc_proto_library")
load("@org_pubref_rules_protobuf//python:rules.bzl", "py_proto_library")

licenses(["notice"])

package(
    default_visibility = ["//visibility:public"],
)

filegroup(
    name = "srcs",
    srcs = [
        "BUILD.bazel",
        ":proto",
    ],
)

filegroup(
    name = "proto",
    srcs = ["testify.proto"],
)

######### LIBRARY #########

go_proto_library(
    name = "proto_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
        "@com_github_grpc_ecosystem_grpc_gateway//protoc-gen-grpc-gateway:go_gen_grpc_gateway",
    ],
    importpath = "github.com/raggledodo/dora/proto",
    proto = ":proto_proto",
    deps = ["@go_googleapis//google/api:annotations_go_proto"],
)

go_library(
    name = "go_default_library",
    embed = [":proto_go_proto"],
    importpath = "github.com/raggledodo/dora/proto",
)

proto_library(
    name = "proto_proto",
    srcs = [":proto"],
    deps = [
        "@com_google_protobuf//:empty_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

cc_proto_library(
    name = "cc_proto",
    protos = [":proto"],
    imports = [
        "external/com_google_protobuf/src",
        "external/com_github_googleapis",
    ],
    inputs = [
        "@com_google_protobuf//:well_known_protos",
        "@com_github_googleapis//:annotations_proto",
    ],
    deps = [
        "@com_github_googleapis//:annotations_cc_proto",
    ],
    with_grpc = True,
)

py_proto_library(
    name = "py_proto",
    protos = [":proto"],
    imports = [
        "external/com_google_protobuf/src",
        "external/com_github_googleapis",
    ],
    inputs = [
        "@com_google_protobuf//:well_known_protos",
        "@com_github_googleapis//:annotations_proto",
    ],
    deps = [
        "@com_github_googleapis//:annotations_py_proto",
    ],
    with_grpc = True,
)
